[package]
name = "arcdps_buddy"
version = "0.3.1"
edition = "2021"
authors = ["Zerthox"]
repository = "https://github.com/zerthox/arcdps-buddy"

[dependencies]
arc_util = { git = "https://github.com/zerthox/arcdps-utils", features = ["serde", "settings"] }
arcdps = { git = "https://github.com/zerthox/arcdps-bindings", features = ["log", "serde", "strum"] }
log = { version = "0.4.18", features = ["release_max_level_info"] }
once_cell = "1.17.2"
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
strum = { version = "0.24.1", features = ["derive"] }

[build-dependencies]
proc-macro2 = "1.0.59"
quote = "1.0.28"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "thin"
panic = "abort" # rust currently aborts across ffi boundaries anyway
