[package]
name = "arcdps_buddy"
version = "0.5.2"
edition = "2021"
authors = ["Zerthox"]
repository = "https://github.com/zerthox/arcdps-buddy"

[dependencies]
arc_util = { git = "https://github.com/zerthox/arcdps-utils", features = ["serde", "settings", "update"] }
arcdps = { git = "https://github.com/zerthox/arcdps-bindings", features = ["log", "serde", "strum", "unwind"] }
log = { version = "0.4.18", features = ["release_max_level_info"] }
num_enum = "0.7.1"
once_cell = "1.17.2"
phf = { version = "0.11.2", features = ["macros"] }
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
strum = { version = "0.25.0", features = ["derive"] }

[build-dependencies]
proc-macro2 = "1.0.59"
quote = "1.0.28"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "thin"
